# ASI_2025

./: .gitignore  README.md
slides/0. Introduction/: ~$Introduction.pptx
slides/10. Kubernetes and Kubeflow pipelines/: 1. Docker - technological background.pptx  2. Introduction to Kubernetes.pptx
slides/11. AI Architecture Design/: 1. IT System Architecture.pptx  2. Data Infrastructure.pptx  3. Data Consumers and Producers.pptx  4. Data Processing.pptx  5. ML Architectures.pptx  6. Sourcing Strategy.pptx  check-list.gsheet
slides/2. BigData/: 0. Introduction.pptx  5. Changes.pptx
slides/3. Model Lifecycle/CRISP-DM/: CRISP DM - project template.gsheet
slides/3. Model Lifecycle/CRISP-DM/1. Business Understanding/: 1. Business Understanding - final report.gdoc  1.1. Business Objectives.gdoc  1.2. Current Situation.gdoc  1.3. ML Project Goals.gdoc  1.4. Project Plan.gdoc
slides/3. Model Lifecycle/CRISP-DM/2. Data Understanding/: 2.1. Initial Data Collection Report.gdoc  2.2. Data Description Report.gdoc  2.3. Data Exploration Report.gdoc  2.4. Data Quality Report.gdoc  _2. Data Understanding - Final Report.gdoc
slides/3. Model Lifecycle/CRISP-DM/3. Data Preparation/: 3. Data Preparation - Final Report.gdoc  3.1. Data Description.gdoc  (+5 more)
slides/6. Containerization/1. Introduction/: Docker - introduction.pptx
slides/6. Containerization/4. Container-host data exchange/: Container-host and container-container data exchange.pptx
slides/6. Containerization/5. Multi-container apps/: docker-compose (1).yml
slides/6. Containerization/z. Summary/: 1. Summary.pptx
slides/9. Data and Model Drift/: Data Drift.pptx  Model Drift.pptx
src/1. Set-up/: GCP_VM_Setup_Guide.md  README.md
src/2. BigData/1. Data/1. pandas_vs_duckdb/: README.md  bigdata_pandas_vs_duckdb.py  pyproject.toml
src/2. BigData/1. Data/3. BigQuery Iowa Analysis/: 1. read_from_GBQ.py  README - setup.md  README.md  pyproject.toml
src/2. BigData/2. Models/1. minimal/: 0. fetch_data.py  1. train.py  2. predict.py  README.md  pyproject.toml
src/2. BigData/2. Models/1. minimal/.claude/: settings.local.json
src/2. BigData/2. Models/3. advanced/: 0. fetch_data.py  1. train.py  2. predict.py  3. evaluate.py  README.md  evaluation_report.json  model_metadata.json  predictions.json  pyproject.toml
src/2. BigData/2. Models/3. advanced/config/: config.toml
src/2. BigData/2. Models/3. advanced/data/: data_quality_report.json  iowa_sales.csv
src/2. BigData/3. Deployment/2-docker/backend/: 0. train.py  Dockerfile  README.md  main.py  pyproject.toml
src/2. BigData/3. Deployment/2-docker/frontend/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
src/2. BigData/4. Performance/: .gitignore  README.md  locustfile.py  pyproject.toml  test-gcp.sh  test-local.sh
src/2. BigData/5. Experiments/: .dockerignore  .env.example  .gitignore  Dockerfile-funny  Dockerfile-serious  README.md  app-funny.py  app-serious.py  build-funny.sh  build-serious.sh  canary.sh  deploy-funny.sh  deploy-serious.sh  pyproject.toml
(+78 files in other folders)
