[project]
name = "bigquery-iowa-analysis"
version = "0.1.0"
description = "BigQuery Iowa liquor sales data analysis with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.25.0",
    "pandas>=2.2.0",
    "db-dtypes>=1.2.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]