[project]
name = "iowa-frontend"
version = "0.1.0"
description = "Iowa sales forecasting Streamlit frontend (Docker deployment)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "numpy>=1.24.0,<2.0.0",  # Constrain NumPy for consistency with backend
]
